Moved App to be as a react component

--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "github:testing-library/user-event"
+    "@testing-library/user-event": "^14.4.3"
   }
 }
